Re-enable Enter for default copy-selection behavior

--- a/tmux.conf
+++ b/tmux.conf
@@ -152,22 +152,22 @@ if-shell -b '[ "$(echo "$TMUX_VERSION < 2.2" | bc)" -eq 1 ]' \
 
 # In 2.4, the vi-copy tables have been replaced by the copy-mode-vi tables
 if-shell -b '[ "$(echo "$TMUX_VERSION < 2.4" | bc)" -eq 1 ]' \
-   "bind-key   -t vi-copy      v       begin-selection; \
-    bind-key   -t vi-copy      V       select-line; \
-    bind-key   -t vi-copy      C-v     rectangle-toggle; \
-    bind-key   -t vi-copy      C-b     page-up; \
-    bind-key   -t vi-copy      C-f     page-down; \
-    unbind-key -t vi-copy      Enter; \
-    if-shell   -b 'command -v xsel'   'bind-key -t vi-copy y copy-pipe-and-cancel \"xsel -ip && xsel -op | xsel -ib\"'; \
-    if-shell   -b 'command -v pbcopy' 'bind-key -t vi-copy y copy-pipe-and-cancel \"pbcopy\"'" \
-   "bind-key   -T copy-mode-vi v       send-keys -X begin-selection; \
-    bind-key   -T copy-mode-vi V       send-keys -X select-line; \
-    bind-key   -T copy-mode-vi C-v     send-keys -X rectangle-toggle; \
-    bind-key   -T copy-mode-vi C-b     send-keys -X page-up; \
-    bind-key   -T copy-mode-vi C-f     send-keys -X page-down; \
-    unbind-key -T copy-mode-vi Enter; \
-    if-shell   -b 'command -v xsel'   'bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel \"xsel -ip && xsel -op | xsel -ib\"'; \
-    if-shell   -b 'command -v pbcopy' 'bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel \"pbcopy\"'"
+   "bind-key -t vi-copy      v       begin-selection; \
+    bind-key -t vi-copy      V       select-line; \
+    bind-key -t vi-copy      C-v     rectangle-toggle; \
+    bind-key -t vi-copy      C-b     page-up; \
+    bind-key -t vi-copy      C-f     page-down; \
+    bind-key -t vi-copy      Enter   copy-selection; \
+    if-shell -b 'command -v xsel'   'bind-key -t vi-copy y copy-pipe-and-cancel \"xsel -ip && xsel -op | xsel -ib\"'; \
+    if-shell -b 'command -v pbcopy' 'bind-key -t vi-copy y copy-pipe-and-cancel \"pbcopy\"'" \
+   "bind-key -T copy-mode-vi v       send-keys -X begin-selection; \
+    bind-key -T copy-mode-vi V       send-keys -X select-line; \
+    bind-key -T copy-mode-vi C-v     send-keys -X rectangle-toggle; \
+    bind-key -T copy-mode-vi C-b     send-keys -X page-up; \
+    bind-key -T copy-mode-vi C-f     send-keys -X page-down; \
+    bind-key -T copy-mode-vi Enter   send-keys -X copy-selection; \
+    if-shell -b 'command -v xsel'   'bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel \"xsel -ip && xsel -op | xsel -ib\"'; \
+    if-shell -b 'command -v pbcopy' 'bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel \"pbcopy\"'"
 
 # In 2.6, makes bell, activity and silence alerting more consistent, `both' is added to visual-*
 if-shell -b '[ "$(echo "$TMUX_VERSION < 2.6" | bc)" -eq 1 ]' \
