Use awk instead of bc for better POSIX compatibility

--- a/tmux.conf
+++ b/tmux.conf
@@ -127,17 +127,17 @@ bind-key '/' display-panes
 run-shell 'tmux setenv -g TMUX_VERSION $(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
 
 # In 1.8, a new option is added to auto-renumber windows when closed
-if-shell -b '[ "$(echo "$TMUX_VERSION >= 1.8" | bc)" -eq 1 ]' \
+if-shell -b '[ "$(echo $TMUX_VERSION | awk "{ print (\$1 >= 1.8) }")" -eq 1 ]' \
    "set-option -g renumber-windows on"
 
 # In 1.9, 'default-path' has been removed. The new-window command accepts '-c' to cater for this
-if-shell -b '[ "$(echo "$TMUX_VERSION >= 1.9" | bc)" -eq 1 ]' \
+if-shell -b '[ "$(echo $TMUX_VERSION | awk "{ print (\$1 >= 1.9) }")" -eq 1 ]' \
    "bind-key C new-window      -c '#{pane_current_path}'; \
     bind-key S split-window -v -c '#{pane_current_path}'; \
     bind-key V split-window -h -c '#{pane_current_path}'"
 
 # In 2.1, "mouse" option replaces the previous 4 mouse options
-if-shell -b '[ "$(echo "$TMUX_VERSION < 2.1" | bc)" -eq 1 ]' \
+if-shell -b '[ "$(echo $TMUX_VERSION | awk "{ print (\$1 < 2.1) }")" -eq 1 ]' \
    "set-window-option -g mode-mouse on; \
     set-option        -g mouse-select-pane on; \
     set-option        -g mouse-select-window on; \
@@ -145,13 +145,13 @@ if-shell -b '[ "$(echo "$TMUX_VERSION < 2.1" | bc)" -eq 1 ]' \
    "set-option        -g mouse on"
 
 # In 2.2, UTF-8 is autodetected, thus errors occur if explicitly set
-if-shell -b '[ "$(echo "$TMUX_VERSION < 2.2" | bc)" -eq 1 ]' \
+if-shell -b '[ "$(echo $TMUX_VERSION | awk "{ print (\$1 < 2.2) }")" -eq 1 ]' \
    "set-window-option -g utf8 on; \
     set-option        -g mouse-utf8 on; \
     set-option        -g status-utf8 on"
 
 # In 2.4, the vi-copy tables have been replaced by the copy-mode-vi tables
-if-shell -b '[ "$(echo "$TMUX_VERSION < 2.4" | bc)" -eq 1 ]' \
+if-shell -b '[ "$(echo $TMUX_VERSION | awk "{ print (\$1 < 2.4) }")" -eq 1 ]' \
    "bind-key -t vi-copy      v       begin-selection; \
     bind-key -t vi-copy      V       select-line; \
     bind-key -t vi-copy      C-v     rectangle-toggle; \
@@ -170,7 +170,7 @@ if-shell -b '[ "$(echo "$TMUX_VERSION < 2.4" | bc)" -eq 1 ]' \
     if-shell -b 'command -v pbcopy' 'bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel \"pbcopy\"'"
 
 # In 2.6, makes bell, activity and silence alerting more consistent, `both' is added to visual-*
-if-shell -b '[ "$(echo "$TMUX_VERSION < 2.6" | bc)" -eq 1 ]' \
+if-shell -b '[ "$(echo $TMUX_VERSION | awk "{ print (\$1 < 2.6) }")" -eq 1 ]' \
    "set-option -g bell-on-alert   on; \
     set-option -g bell-action     other" \
    "set-option -g activity-action other; \
@@ -179,7 +179,7 @@ if-shell -b '[ "$(echo "$TMUX_VERSION < 2.6" | bc)" -eq 1 ]' \
     set-option -g visual-bell     both"
 
 # In 2.9, the individual -fg, -bg and -attr options have been removed
-if-shell -b '[ "$(echo "$TMUX_VERSION < 2.9" | bc)" -eq 1 ]' \
+if-shell -b '[ "$(echo $TMUX_VERSION | awk "{ print (\$1 < 2.9) }")" -eq 1 ]' \
    "set-option        -g message-fg                  'default'; \
     set-option        -g message-bg                  'default'; \
     set-option        -g message-attr                'none'; \
