Add truecolor support and tweak

--- a/tmux.conf
+++ b/tmux.conf
@@ -22,12 +22,13 @@ set-option -g default-command "${SHELL}"
 # ----------------------------------------
 # Enable 256 colors in terminal
 set-option -g default-terminal 'screen-256color'
+set-option -ag terminal-overrides ",xterm-256color:Tc"
 
 # Make the index numbering begin with 0
 set-option -g base-index 0
 set-window-option -g pane-base-index 0
 
-# Delay time after an escape is input, preventing the ESC action in vi from working improperly
+# Delay time after an escape key press, preventing the ESC action in vi from working improperly
 set-option -sg escape-time 0
 
 # Time for which status line messages invoked by <prefix>:info, actions and bells are displayed
@@ -115,7 +116,8 @@ bind-key r source-file $HOME/.tmux.conf \; display-message 'source-file done; re
 
 # Change default key which is disabled by user binding definition
 ## choose-tree whose default key is to 's'
-bind-key '\' choose-tree
+unbind-key 'w'
+bind-key '\' choose-tree -Zw
 ## display-panes whose default key is to 'q'
 bind-key '/' display-panes
 
